fixed horizontal scroll datatable problems

--- a/src/assets/common.styl
+++ b/src/assets/common.styl
@@ -18,6 +18,9 @@ span.tiny, span.tiny .v-icon, .v-list--dense .v-list__tile span.tiny .v-icon
   font-size:14px
 .d-none
   display: none
+.multi-row
+  word-break: break-all
+  width:100%
 // vuetify-related
 .v-btn.plain:hover:before,
 .v-btn.plain:focus:before,
@@ -49,6 +52,8 @@ span.tiny, span.tiny .v-icon, .v-list--dense .v-list__tile span.tiny .v-icon
   text-transform: none
 .customAction .v-datatable__actions
   justify-content: space-between
+table.v-table th:not(.multi-row), table.v-table td:not(.multi-row)
+  white-space:nowrap
 //file-pond
 .filepond--drop-label label
   cursor:pointer
